--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-	<div>
+	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div>
@@ -80,5 +80,6 @@
 			</a>
 		</div>
 	</div>
+
 </body>
 </html>
